# median

./: .agent-models.json  .gitignore  AGENTS.md  GIT_SETUP.md  LICENSE  README.md
.github/workflows/: test.yml
python/: README.md  TESTING_CHECKLIST.md  TESTING_QUICK_REF.md  agent_config_example.py  performance_comparison.py  pyproject.toml  test_median_only.py  test_median_performance.py
python/median/: __init__.py  percentile_calculator.py
python/median/tests/: __init__.py  test_percentile_calculator.py
