[tool.poetry]
name = "median"
version = "0.1.0"
description = "Optimal percentile calculator using heap-based algorithm"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "median", from = "python"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pyhamcrest = "^2.1.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["median/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=median --cov-report=term-missing"
